// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tootips open 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="corn-popover-plane"
        data-testid="mask"
      />
      <div
        class="corn-popover-show"
        data-testid="centent"
      >
        <div
          class="corn-tooltip-arrow corn-tooltip-arrow-bottom"
          style="top: 0px; left: 0px;"
        />
        <div
          class="corn-tooltip corn-tooltip-bottom"
          style="top: 8.533333333333333px; left: -76.80000000000001px;"
        >
          <div
            class="corn-tooltip-item corn-f corn-ac corn-jc"
          >
            金币
          </div>
          <div
            class="corn-tooltip-item corn-f corn-ac corn-jc corn-tooltip-active"
          >
            人鱼
          </div>
        </div>
      </div>
      <div
        class="corn-popover "
      >
        更多
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="corn-popover-plane"
      data-testid="mask"
    />
    <div
      class="corn-popover-show"
      data-testid="centent"
    >
      <div
        class="corn-tooltip-arrow corn-tooltip-arrow-bottom"
        style="top: 0px; left: 0px;"
      />
      <div
        class="corn-tooltip corn-tooltip-bottom"
        style="top: 8.533333333333333px; left: -76.80000000000001px;"
      >
        <div
          class="corn-tooltip-item corn-f corn-ac corn-jc"
        >
          金币
        </div>
        <div
          class="corn-tooltip-item corn-f corn-ac corn-jc corn-tooltip-active"
        >
          人鱼
        </div>
      </div>
    </div>
    <div
      class="corn-popover "
    >
      更多
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tootips open move 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="corn-popover-plane"
        data-testid="mask"
      />
      <div
        class="corn-popover-show"
        data-testid="centent"
      >
        <div
          class="corn-tooltip-arrow corn-tooltip-arrow-bottom"
          style="top: 0px; left: 0px;"
        />
        <div
          class="corn-tooltip corn-tooltip-bottom"
          style="top: 58.53333333333333px; left: -66.80000000000001px;"
        >
          <div
            class="corn-tooltip-item corn-f corn-ac corn-jc"
          >
            金币
          </div>
          <div
            class="corn-tooltip-item corn-f corn-ac corn-jc corn-tooltip-active"
          >
            人鱼
          </div>
        </div>
      </div>
      <div
        class="corn-popover "
      >
        更多
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="corn-popover-plane"
      data-testid="mask"
    />
    <div
      class="corn-popover-show"
      data-testid="centent"
    >
      <div
        class="corn-tooltip-arrow corn-tooltip-arrow-bottom"
        style="top: 0px; left: 0px;"
      />
      <div
        class="corn-tooltip corn-tooltip-bottom"
        style="top: 58.53333333333333px; left: -66.80000000000001px;"
      >
        <div
          class="corn-tooltip-item corn-f corn-ac corn-jc"
        >
          金币
        </div>
        <div
          class="corn-tooltip-item corn-f corn-ac corn-jc corn-tooltip-active"
        >
          人鱼
        </div>
      </div>
    </div>
    <div
      class="corn-popover "
    >
      更多
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tootips 快照 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="corn-popover "
      >
        更多
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="corn-popover "
    >
      更多
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
